--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/google-diff-match-patch -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>google-diff-match-patch</artifactId>
+			<version>20121119-1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
